--- a/src/_sass/components/_buttons.scss
+++ b/src/_sass/components/_buttons.scss
@@ -51,4 +51,12 @@
     display: inline-flex;
     align-items: center;
   }
+
+  a {
+    text-decoration: none;
+    color: inherit;
+    &:hover {
+      color: inherit;
+    }
+  }
 }
