--- a/src/_layouts/home.html
+++ b/src/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
     <h1>{{ page.header }}</h1>
     <h2>{{ page.subheader }}</h2>
     <div class="text-center">
-      {% include material-button.html name="Start Learning" %}
+      {% include material-button.html name="Start Learning" href="/articles" %}
     </div>
   </section>
 </div>
